--- a/Jackpot/Base.lproj/Main.storyboard
+++ b/Jackpot/Base.lproj/Main.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TVL-FZ-mEi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Winning Ticket-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController title="Winning Ticket" id="BYZ-38-t0r" customClass="WinningTicketViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,17 +16,37 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LcM-cM-xvN">
+                                <rect key="frame" x="251" y="416" width="98" height="30"/>
+                                <state key="normal" title="Check Tickets"/>
+                            </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I2o-O6-IcD">
+                                <rect key="frame" x="0.0" y="192" width="600" height="216"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="mxD-s9-uym"/>
+                                </constraints>
+                            </pickerView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LcM-cM-xvN" firstAttribute="top" secondItem="I2o-O6-IcD" secondAttribute="bottom" constant="8" id="FGn-7f-yVl"/>
+                            <constraint firstAttribute="trailing" secondItem="I2o-O6-IcD" secondAttribute="trailing" id="NXD-6U-0er"/>
+                            <constraint firstItem="I2o-O6-IcD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cnk-3T-Jco"/>
+                            <constraint firstItem="LcM-cM-xvN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kPN-vo-X57"/>
+                            <constraint firstItem="I2o-O6-IcD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lk3-Y8-JPf"/>
+                            <constraint firstItem="I2o-O6-IcD" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wh2-Xe-RiM"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1248" y="751"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Tickets-->
         <scene sceneID="ZgB-u4-e07">
             <objects>
-                <tableViewController id="JZP-vD-M7J" customClass="TicketsTableViewController" sceneMemberID="viewController">
+                <tableViewController title="Tickets" id="JZP-vD-M7J" customClass="TicketsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="oxe-sR-fIg">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -63,10 +83,10 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="LMc-ml-KDw">
-                        <barButtonItem key="leftBarButtonItem" title="$" width="1" id="fbT-Wp-PgV">
+                        <barButtonItem key="leftBarButtonItem" title="Create Winner" width="1" id="fbT-Wp-PgV">
                             <color key="tintColor" red="0.2470588235" green="0.57254901960000004" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <action selector="checkWinners:" destination="JZP-vD-M7J" id="aQM-OT-W91"/>
+                                <segue destination="BYZ-38-t0r" kind="show" id="JD4-aR-Qke"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" image="Ticket" id="Aas-dW-CeU">
