--- a/Jackpot/Base.lproj/Main.storyboard
+++ b/Jackpot/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TVL-FZ-mEi">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -20,19 +20,36 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LcM-cM-xvN">
                                 <rect key="frame" x="251" y="416" width="98" height="30"/>
                                 <state key="normal" title="Check Tickets"/>
+                                <connections>
+                                    <action selector="checkTicket:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F97-Ok-v50"/>
+                                    <segue destination="r6r-iI-b97" kind="unwind" unwindAction="showTickets:" id="fju-y0-0wi"/>
+                                </connections>
                             </button>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I2o-O6-IcD">
                                 <rect key="frame" x="0.0" y="192" width="600" height="216"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="216" id="mxD-s9-uym"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="KzR-Vw-A93"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="xyH-oE-U7X"/>
+                                </connections>
                             </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UZq-8h-KLI">
+                                <rect key="frame" x="245" y="130" width="110" height="30"/>
+                                <state key="normal" title="Random Winner"/>
+                                <connections>
+                                    <action selector="randomWinner:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tl4-Vp-Eta"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="UZq-8h-KLI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9Tl-RN-Pfp"/>
                             <constraint firstItem="LcM-cM-xvN" firstAttribute="top" secondItem="I2o-O6-IcD" secondAttribute="bottom" constant="8" id="FGn-7f-yVl"/>
                             <constraint firstAttribute="trailing" secondItem="I2o-O6-IcD" secondAttribute="trailing" id="NXD-6U-0er"/>
                             <constraint firstItem="I2o-O6-IcD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cnk-3T-Jco"/>
+                            <constraint firstItem="I2o-O6-IcD" firstAttribute="top" secondItem="UZq-8h-KLI" secondAttribute="bottom" constant="32" id="haG-h7-1y6"/>
                             <constraint firstItem="LcM-cM-xvN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kPN-vo-X57"/>
                             <constraint firstItem="I2o-O6-IcD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lk3-Y8-JPf"/>
                             <constraint firstItem="I2o-O6-IcD" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wh2-Xe-RiM"/>
@@ -40,6 +57,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="r6r-iI-b97" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1248" y="751"/>
         </scene>
@@ -86,7 +104,7 @@
                         <barButtonItem key="leftBarButtonItem" title="Create Winner" width="1" id="fbT-Wp-PgV">
                             <color key="tintColor" red="0.2470588235" green="0.57254901960000004" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <segue destination="BYZ-38-t0r" kind="show" id="JD4-aR-Qke"/>
+                                <segue destination="BYZ-38-t0r" kind="show" identifier="segueToPicker" id="JD4-aR-Qke"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" image="Ticket" id="Aas-dW-CeU">
